@@ -131,6 +131,7 @@ Cacti CHANGELOG
 -issue#5384: Untemplated Data Sources can fail to update due to lack of an assigned Graph
 -issue#5386: RRDCheck processes disabled hosts
 -issue#5390: Fix SQL error when saving DS template 
+-issue#5392: Template import should not end with php error
 -feature#5375: Add template for Fortinet firewall and Aruba Instant cluster
 -feature: Upgrade billboard.js to version 3.7.4
 -feature: Upgrade d3.js to version 7.8.2
